Added plenary talk by Julian

--- a/report.tex
+++ b/report.tex
@@ -118,11 +118,62 @@ Day4: December 12 (Thu)
 \section{Plenary Talks}
 
 \subsection{Walkthrough of Modern Release Analyics Workbench for Android Apps}
+\smallsection{Authors}
+Julian Harty, Commercetest Limited/Open University, UK \linebreak
 
-Julian Harty, Commercetest Limited/Open University, UK
+The walkthrough was a live demonstration by Julian Harty focusing primarily on Google Play Console including two integrated facilities: 1) Release Engineering and 2) Android Vitals analyics and reporting. We also performed very brief walkthroughs of the continuous build processes for several Android apps.
 
-TODO
+\subsubsection{Google Play Console}
+Google Play Console is the interface Google provides primarily for developers of Android apps in the Google Play Store. It is intended to provide developers with tools, reports, and insights about how their apps are performing in terms of pupularity, usage, revenues, stability, ratings and reviews. Developers (with appropriate permission) can also manage releases from both a testing and in terms of managing production releases.
 
+Each app belongs to an owner, who will have registered as a developer and paid a one-time fee. Owners can share aspects of their account with other people who have a Google account and who have accepted Google's terms and conditions, etc. The sharing can be granular and limited to a single app owned by a particular owner, the owner can also set the permissions that these other people will have for one or more apps they own. Individuals can have access to multiple accounts and distinct permissions for each app and/or account.
+
+
+\subsubsection{The apps}
+Julian Harty has been involved in each of the following projects and therefore able to introduce the tools used by each project and aspects of the development, testing, and release processes. In each case there are lead developers for the particular who may be willing to provide further details and insights related to Release Engineering.
+
+\begin{itemize}
+\item Android Apps from the catrob.at team at TU Graz (source code   [\href{https://github.com/catrobat/}{https://github.com/catrobat/}], project homepage [\href{https://www.catrobat.org/}{https://www.catrobat.org/}], JIRA [\href{https://jira.catrob.at/}{https://jira.catrob.at/}], CI [\href{https://jenkins.catrob.at/}{https://jenkins.catrob.at}])
+
+\item Android Apps from the Kiwix team (source code [\href{https://github.com/kiwix/kiwix-android/}{https://github.com/kiwix/kiwix-android/}], project homepage [\href{https://www.kiwix.org/}{https://www.kiwix.org/}]). (note: currently migrating from travis-ci - Kiwix on Travis-CI [\href{https://travis-ci.com/github/kiwix/kiwix-android}{https://travis-ci.com/github/kiwix/kiwix-android}] to GitHub Actions -  GitHub Actions for Kiwix [\href{https://github.com/kiwix/kiwix-android/actions}{https://github.com/kiwix/kiwix-android/actions}]).
+
+\item Android Apps from the eduVPN project (source code [\href{https://github.com/eduvpn/android}{https://github.com/eduvpn/android}], project homepage [\href{https://eduvpn.nl/}{https://eduvpn.nl/}]. A proof-of-concept CI is on Travis-CI [\href{https://travis-ci.com/github/commercetest/android}{https://travis-ci.com/github/commercetest/android}]
+\end{itemize}
+
+\subsubsection{CI and CB}
+\textbf{Characteristics of the Build Process for these apps}: Each project team has a distinct build process. Of these, the build process and tooling for the Catrobat apps is the most sophisticated and mature. 
+
+\textbf{Kiwix}: The Kiwix Android codebase incorporates a library written in C++ that is shared across many Kiwix projects (including web servers and the iOS app). There are distinct codebases, on GitHub, for the library and for shared build processes and tools. Development builds use pre-built binaries for the native code. 
+
+\textbf{Catrobat apps}: The Catrobat apps are built using a farm of Jenkins servers. 
+
+\textbf{eduVPN}: The app is independently built by a developer who does not work directly on the development of the app's codebase. 
+
+\subsubsection{Characteristics of testing for these apps}
+\textbf{Kiwix}: Until the end of 2019 the project used a combination of Travis-CI and TestDroid to run the automated tests on several hosted physical devices.
+
+\textbf{Catrobat apps}: Automated tests are run by Jenkins. 
+
+\textbf{eduVPN}: Testing is ad-hoc and best described via one of the project's 'issues': eduVPN issue 221 [\href{https://github.com/eduvpn/android/issues/221}{https://github.com/eduvpn/android/issues/221}]
+
+
+\subsubsection{Characteristics of the Release Engineering for these apps}
+
+\textbf{Elapsed times}
+
+\begin{itemize}
+\item Kiwix app
+\item Custom Kiwix apps: WikiMed, ...
+\item eduVPN: eduVPN, Home edition (not currently in a CB)
+\item Catrobat: PocketCode, PocketPaint
+\end{itemize}
+
+\subsubsection{Glossary}
+
+\begin{itemize}
+\item CB: Continuous Build
+\item CI: Continuous Integration
+\end{itemize}
 \clearpage
 
 \section{Breakout Group Discussions}
