Initial report on Sessions 4 and 5

--- a/report.tex
+++ b/report.tex
@@ -4,6 +4,7 @@
 \usepackage{bmpsize}
 \usepackage{shonan}
 \usepackage{hyperref}
+\usepackage{enumerate}
 \usepackage{tabularx}
 \usepackage{url}
 
@@ -980,11 +981,43 @@ Mei, Carmine, Sebastian, Shane, Tom, Raula, Keheliya, Afnan
 
 \subsection{Session 4 and 5: Seeding Collaborative Projects}
 
-\subsubsection{Log Analysis}
+Plenty of productive discussions were had during the first three sessions. In the last two sessions, we chose to focus on three topics that will seed future collaborative projects.
 
 \subsubsection{Continuous Experimentation with Mobile App Restrictions}
 
+\smallsection{Motivation}
+To mitigate the risk of delivering buggy features to users, developers adopt incremental releasing strategies known as Continuous Experimentation (CE). CE also helps developers to determine if the new features are successful in serving the business goals, refining them if needed. Due to the app-store-centered delivery of mobile applications, CE in the mobile domain presents different challenges and opportunities than other SE disciplines. However, the extent to which CE is adopted in the mobile app development context is not well-understood.
+
+\smallsection{Research Questions:}
+
+\begin{enumerate}[\bfseries RQ1]
+	\item What are the common CE strategies practiced by mobile app developers?
+	\item How are current tools supporting the practice of CE in mobile?
+	\item What are the limitations and challenges in the state-of-the-art CE strategies and tools?
+\end{enumerate}
+
+\smallsection{Initial Approach}
+We plan to conduct a mixed method study to understand the state of practice in Continuous Experimentation among mobile developers. First, a developer survey will provide insights on the level of maturity of CE practices, the limitations that developers face and the tooling that developers are using to solve the problems in CE. Based on the results from this qualitative study, we will mine the historical data in the source code repositories of mobile apps to quantify and characterize CE tool usage in practice.
+
 \subsubsection{The Ubiquity of the App Store Paradigm (Beyond Mobile Apps)}
+
+\smallsection{Motivation}
+It quickly became clear during the meeting that the App Store paradigm has farther reaching implications than were anticipated prior to the meeting.
+App stores have permeated a large number of sectors of the software market.
+Users now expect to interact with app stores as the standard way to acquire software.
+However, the implications of variations of app stores are not well understood.
+
+\smallsection{Research Questions}
+
+\begin{enumerate}[\bfseries RQ1]
+	\item What are the emergent patterns in app stores?
+	\item What are the implications of different app store patterns on stakeholders (e.g., developers, release engineers)?
+\end{enumerate}
+
+\smallsection{Initial Approach}
+We plan to apply qualitative research methods to systematically curate a catalog of patterns of app stores and their perceived implications for stakeholders. This catalog will be a useful resource for more than just addressing our research questions and will be made openly available to the research community.
+
+\subsubsection{Log Analysis in the Context of Mobile App}
 
 \clearpage
 
